objects/Eligibility__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>HYPERLINK(Implementation_Record_ID__r.Account.Id,Implementation_Record_ID__r.Account.Name)</formula>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Eligibility</relationshipLabel>
        <relationshipName>Eligibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addtl_Dom_Partner_Detail_West_Only__c</fullName>
        <inlineHelpText>STAT = Statutory Without DP COBRA ;STAC = Statutory With DP COBRA ;STP = Statutory PLUS Without DP COBRA; STPC = Statutory PLUS With DP COBRA ;STD = Standard Without DP COBRA ;STDC Or SF/LA = Standard With DP COBRA(Option Is Also For L.A./ San Francisco)</inlineHelpText>
        <label>Addtl Dom Partner Detail (West Only)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>STAT</fullName>
                </value>
                <value>
                    <fullName>STAC</fullName>
                </value>
                <value>
                    <fullName>STP</fullName>
                </value>
                <value>
                    <fullName>STPC</fullName>
                </value>
                <value>
                    <fullName>STD</fullName>
                </value>
                <value>
                    <fullName>STDC or SF/LA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_and_Rule_DetailsStudent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Age and Rule Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_and_Rule_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please identify the age/rules by package/suffixes</inlineHelpText>
        <label>Age and Rule Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apply_to_All_Packages_SuffixesStudent__c</fullName>
        <label>Apply To All Packages/Suffixes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_to_All_Packages_Suffixes__c</fullName>
        <label>Apply To All Packages/Suffixes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>At_what_level_will_ID_cards_be_generated__c</fullName>
        <label>At What Level Will ID Cards Be Generated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>000 - None</fullName>
                </value>
                <value>
                    <fullName>001-Sub Level (1 card for indiv contract type/2 for all other types)</fullName>
                </value>
                <value>
                    <fullName>144-Member Level (1 card for each member of the family)</fullName>
                </value>
                <value>
                    <fullName>002 - PCP/Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_Administration_Services_Provided__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>A yes/no indicator denoting whether Unicare is providing COBRA Admin Services. This includes the direct billing of cobra subscribers and the tracking of COBRA notification days. This field was added for the WGS system and the Group Load functionality.</inlineHelpText>
        <label>COBRA Administration Services Provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA_Applies_to_Domestic_Partner__c</fullName>
        <label>COBRA Applies To Domestic Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cal_Cobra_Eligible_Participants__c</fullName>
        <inlineHelpText>Do You Have Any CAL-COBRA Eligible Participants</inlineHelpText>
        <label>Cal-Cobra Eligible Participants</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Max_Age_Limit__c</fullName>
        <inlineHelpText>If Ages And Rules Differ Between Plans/Populations, This Must Be Specified.</inlineHelpText>
        <label>Child Max Age Limit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Birthday</fullName>
                </value>
                <value>
                    <fullName>End of Birthday Month</fullName>
                </value>
                <value>
                    <fullName>End of Birthday Year</fullName>
                </value>
                <value>
                    <fullName>Other (explain below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Allows_Domestic_Partners_Covered__c</fullName>
        <inlineHelpText>Will The Client Allow For Domestic (Opposite Sex) Partners To Be Covered</inlineHelpText>
        <label>Client Allows Domestic Partners Covered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Allows_Samesex_Spouses_Covered__c</fullName>
        <label>Client Allows Samesex Spouses Covered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Define_Age_and_Rule_per_Package_SuffixSt__c</fullName>
        <label>Define Age And Rule Per Package/Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Define_Age_and_Rule_per_Package_Suffix__c</fullName>
        <label>Define Age And Rule Per Package/Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>26</fullName>
                    <default>true</default>
                    <label>26</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delete_Dependent_Code__c</fullName>
        <description>This field is being added to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>This field identifies the criteria for allowing dependents to remain on their parents&apos; contract.</inlineHelpText>
        <label>Delete Dependent Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1N</fullName>
                    <default>true</default>
                    <label>(1N) Dependents remain CHD and termed 1st of the month following (FOMF) 26th birthday.</label>
                </value>
                <value>
                    <fullName>1U</fullName>
                    <label>(1U) Dependents remain CHD until FOMF 19th birthday and if eligible; STU from age 19 and termed 1st of the month following (FOMF) 30th birthday.</label>
                </value>
                <value>
                    <fullName>1X</fullName>
                    <label>(1X) Dependents remain CHD and termed 1st of the month following (FOMF) 30th birthday.</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>(13) Dependents remain CHD and termed 1st of the month following (FOMF) 23rd birthday.</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>(14) Dependents remain CHD and termed 1st of the month following (FOMF) 25th birthday.</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>(15) Dependents remain CHD until 1st of the month following (FOMF) the 19th birthday and if eligible; STU from age 19 and termed 1st of the month (FOMF) the 23rd birthday.</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>(18) Dependents remain CHD until 1st of the month (FOMF) 19th birthday and if eligible; STU from age 19 and termed 1st of the month (FOMF) 25th birthday.</label>
                </value>
                <value>
                    <fullName>3O</fullName>
                    <label>(3O) Dependents remain CHD and termed 1st of the year (FOYF) following 27th birthday.</label>
                </value>
                <value>
                    <fullName>3U</fullName>
                    <label>(3U) Dependents remain CHD until 1st of the Year Following (FOYF) the 19th birthday and if eligible; STU from age 19 and termed 1st of the year following (FOYF) the 30th birthday.</label>
                </value>
                <value>
                    <fullName>3X</fullName>
                    <label>(3X) Dependents remain CHD and termed 1st of the year following (FOYF) the 30th birthday.</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>(31) Dependents remain CHD and termed 1st of the year following (FOYF) 19th birthday.</label>
                </value>
                <value>
                    <fullName>35</fullName>
                    <label>(35) Dependents remain CHD until 1st of the Year Following (FOYF) 19th birthday and if eligible; STU from age 19 and termed 1st of the Year Following (FOYF) 23rd birthday.</label>
                </value>
                <value>
                    <fullName>4H</fullName>
                    <label>(4H) Dependents remain CHD until 1st of the month following the 26th birthday and if eligible; STU from age 26 and termed 1st of the month following 30th birthday.</label>
                </value>
                <value>
                    <fullName>6H</fullName>
                    <label>(6H) Dependents remain CHD until 1st of the Year Following (FOYF) the 26th birthday and if eligible; STU from age 26 and termed 1st of the Year Following (FOYF) the 30th birthday.</label>
                </value>
                <value>
                    <fullName>7A</fullName>
                    <label>(7A) Dependents remain CHD and termed 1 month greater than 1st of the month following 26th birthday Example: Birthdate: Dependent turns 26 on March 10 should be termed May 1.</label>
                </value>
                <value>
                    <fullName>7F</fullName>
                    <label>(7F) Dependents remain CHD and termed 1st of the year following (FOYF) 25th birthday and if eligible; remain STU from age 25 and termed until 1st of the month following (FOMF) 26th birthday.</label>
                </value>
                <value>
                    <fullName>7C</fullName>
                    <label>(7C) Dep remain CHD &amp; term 1st of mo. after 26 bday. Gen. custom max age 26 ltr; Per NY Rider groups that OPT IN &amp; request reinstatement for elig. dep under PARENT contract, remains STU from 26 &amp; termed 1st of mo. after 30 bday. Gen. custom max age 30 ltr</label>
                </value>
                <value>
                    <fullName>7D</fullName>
                    <label>(7D) Dependents remain CHD and deleted 1st of the month following 26th birthday; if NY Right of Election is invoked beyond age 26 please see 7E. Custom Max Age 26 letter should be generated 1st of the month following 26th birthday.</label>
                </value>
                <value>
                    <fullName>7E</fullName>
                    <label>(7E) If &quot;Over Age Dependent&quot; group is later added once an Age 26 Adult Dependent has invoked their right under NY Right of Election, dependent is eligible from age 26 and termed 1st of the month following 30th birthday. Generate Custom Max Age 30 letter.</label>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_this_information_apply_to_all_group__c</fullName>
        <inlineHelpText>e.g. COBRA, Retiree</inlineHelpText>
        <label>Does Information Apply To All Groups</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dom_Part_Ind_Same_For_All_QLI_And_Suffix__c</fullName>
        <inlineHelpText>Domestic Partner Indicator (a) Same For Entire Case (b) Different by QLI/Product (c) Different by Suffix/Member</inlineHelpText>
        <label>Dom Part Ind Same For All QLI And Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No (Different by QLI/Product)</fullName>
                </value>
                <value>
                    <fullName>No (Different by Suffix/Member)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_Partner_Apply_To_All_Groups__c</fullName>
        <inlineHelpText>Does Domestic (Opposite Sex) Partner Information Apply To All Groups</inlineHelpText>
        <label>Domestic Partner Apply To All Groups</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_Partner_Indicator__c</fullName>
        <label>Domestic Partner Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N (No Domestic Partner)</label>
                </value>
                <value>
                    <fullName>A</fullName>
                    <label>A (Any Sex Domestic Partner)</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>S (Same Sex Domestic Partner)</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>O (Opposite Sex Domestic Partner)</label>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligibility_Change_Indicator_Dependent__c</fullName>
        <description>This field is being added to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>The ELIGIBILITY TERM RULE CODE field defines eligibility rules for contract cancellations.</inlineHelpText>
        <label>Eligibility Change Ind.–Add Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <default>true</default>
                    <label>01 = ALL DEPENDENT (DEP) ADDS &amp; TERMS EFF FOMF DT OF LIFE EVENT</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02 = NEWBORNS EFF DOB, ALL OTR DEP ADDS &amp; TERMS FOMF DT OF LIFE EVENT</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03 = DEP ADDS EFF DT OF LIFE EVENT, DEP TERMS FOMF DT OF LIFE EVENT</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04 = DEP ADDS EFF DT OF LIFE EVENT, DEP TERMS 1 DAY &gt; THAN LIFE EVENT DT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligibility_Term_Indicator_Dependent_E__c</fullName>
        <description>This field is being added to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>The ELIGIBILITY/CONTRACT TYPE CHANGE CODE field defines eligibility rules for contract type changes, for dependent additions and terminations.</inlineHelpText>
        <label>Eligibility Term Ind.-TermLetPreferences</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <default>true</default>
                    <label>01 = 1ST OF MONTH FOLLOWING LAST DAY WORKED</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02 = 1 DAY GREATER THAN LAST DAY WORKED</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03 = LAST DAY OF THE CALENDER MONTH FOLLOWING LAST DAY WORKED</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Excluded_Code__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>A 2 digit number identifying the class of employees that are excluded from group coverage under the contract. Most common is 16 - Part Time &amp; Temporary (are excluded from coverage). This field was added for the WGS system and the Group Load functionality.</inlineHelpText>
        <label>Employee Excluded Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>16 (CA)</fullName>
                </value>
                <value>
                    <fullName>16 (Central)</fullName>
                </value>
                <value>
                    <fullName>16 (NE)</fullName>
                </value>
                <value>
                    <fullName>16 (NY)</fullName>
                </value>
                <value>
                    <fullName>00 (CO – EAP benefits)</fullName>
                </value>
                <value>
                    <fullName>16 (CO – non EAP benefits)</fullName>
                </value>
                <value>
                    <fullName>00 (NV – EAP benefits)</fullName>
                </value>
                <value>
                    <fullName>16 (NV – non EAP benefits)</fullName>
                </value>
                <value>
                    <fullName>00 (GA)</fullName>
                </value>
                <value>
                    <fullName>00 (VA COVA/TLC/LODA/VA Tech/inmate)</fullName>
                </value>
                <value>
                    <fullName>16 (All other VA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Reinstatement_Date_Eligibility__c</fullName>
        <inlineHelpText>Combined Eligibility Values Cannot Exceed 90 Days Probation Per Aca Mandates</inlineHelpText>
        <label>Employee Reinstatement Date Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hire Date</fullName>
                </value>
                <value>
                    <fullName>First Day After Probation</fullName>
                </value>
                <value>
                    <fullName>First of the Month Following Date of Hire</fullName>
                </value>
                <value>
                    <fullName>First of the Month after Probationary Period</fullName>
                </value>
                <value>
                    <fullName>First of the Second Month after Probationary Period</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Reinstatement_Probationary_Pd__c</fullName>
        <inlineHelpText>Combined Eligibility Values Cannot Exceed 90 Days Probation Per Aca Mandates</inlineHelpText>
        <label>Employee Reinstatement Probationary Pd</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>1 Day</fullName>
                </value>
                <value>
                    <fullName>15 Days</fullName>
                </value>
                <value>
                    <fullName>28 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>40 Days</fullName>
                </value>
                <value>
                    <fullName>42 Days</fullName>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                </value>
                <value>
                    <fullName>56 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>84 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Billing_Impacted__c</fullName>
        <label>Enrollment And Billing Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusions_Apply__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exclusions Apply</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Eligibility</relationshipLabel>
        <relationshipName>Eligibility</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>If_Dep_reaches_max_age_auto_terminate__c</fullName>
        <inlineHelpText>If Dependent Reaches Max Age, Is The Expectation For Anthem To Automatically Terminate</inlineHelpText>
        <label>If Dep Reaches Max Age, Auto Terminate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_No_Specify_Groups_For_Domestic_Part__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If No, Please Specify Groups For Domestic (Opposite Sex) Partner Coverage</inlineHelpText>
        <label>If No, Specify Groups For Domestic Part</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_No_please_specify__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If No, Please Specify</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_indicate_probationary_period__c</fullName>
        <label>If Yes, Indicate Probationary Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DH=DateHired</fullName>
                </value>
                <value>
                    <fullName>1H = First of Month following DOH</fullName>
                </value>
                <value>
                    <fullName>11 = First of Month following 1 Month</fullName>
                </value>
                <value>
                    <fullName>12 = First of Month following 2 Months</fullName>
                </value>
                <value>
                    <fullName>13 = First of Month following 3 Months</fullName>
                </value>
                <value>
                    <fullName>14 = First of Month following 4 Months</fullName>
                </value>
                <value>
                    <fullName>15 = First of Month following 6 Months</fullName>
                </value>
                <value>
                    <fullName>16 = First of Month following 9 Months</fullName>
                </value>
                <value>
                    <fullName>17 = First of Month following 1 Year</fullName>
                </value>
                <value>
                    <fullName>1A = DOH (w/Term - Date of Term) - Washout Code 16</fullName>
                </value>
                <value>
                    <fullName>1B = DOH (w/Term- First of Month following Term) - Washout Code 16</fullName>
                </value>
                <value>
                    <fullName>1C = Other - See Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Record_ID__r.Implementation_Case_Name__c</formula>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Record ID</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Eligibility</relationshipLabel>
        <relationshipName>Eligibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_there_a_Waiting_Period_for_New_Hires__c</fullName>
        <label>Is There A Waiting Period For New Hires</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MHSA_Service_Level_Indicator__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Mental (Behavioral) Health/Substance Abuse Service Level Indicator</inlineHelpText>
        <label>MHSA Service Level Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Situs_State__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0000</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>3000</fullName>
                </value>
                <value>
                    <fullName>3001</fullName>
                </value>
                <value>
                    <fullName>3002</fullName>
                </value>
                <value>
                    <fullName>3004</fullName>
                </value>
                <value>
                    <fullName>3005</fullName>
                </value>
                <value>
                    <fullName>4000</fullName>
                </value>
                <value>
                    <fullName>4001</fullName>
                </value>
                <value>
                    <fullName>4008</fullName>
                </value>
                <value>
                    <fullName>4009</fullName>
                </value>
                <value>
                    <fullName>5000</fullName>
                </value>
                <value>
                    <fullName>5008</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NH_Prob_Pd_Same_For_All_QLI_And_Suffix__c</fullName>
        <inlineHelpText>New Hire Probationary Period (a) Same For Entire Case (b) Different by QLI/Product (c) Different by Suffix/Member</inlineHelpText>
        <label>NH Prob Pd Same For All QLI And Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No (Different by QLI/Product)</fullName>
                </value>
                <value>
                    <fullName>No (Different by Suffix/Member)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>